SubBt/force-app/main/default/objects/Quote_Template__c/Quote_Template__c.object-meta.xml
<CustomObject>
    <label>Doc Template</label>
    <nameField>
        <displayFormat>DT-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Doc Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>