SubBt/force-app/main/default/objects/Quote_Template__c/fields/Font_Family__c.field-meta.xml
<CustomField>
    <fullName>Font_Family__c</fullName>
    <label>Font Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arial</fullName>
            </value>
            <value>
                <fullName>Monospace</fullName>
            </value>
            <value>
                <fullName>Sans-serif</fullName>
            </value>
            <value>
                <fullName>Serif</fullName>
            </value>
            <value>
                <fullName>Verdana</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>