SubBt/force-app/main/default/objects/Quote_Template__c/fields/Sample_Template__c.field-meta.xml
<CustomField>
    <fullName>Sample_Template__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sample Template</label>
    <type>Checkbox</type>
</CustomField>