SubBt/force-app/main/default/objects/Quote_Template__c/fields/Show_Invoice_Shipment__c.field-meta.xml
<CustomField>
    <fullName>Show_Invoice_Shipment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Invoice Shipment</label>
    <type>Checkbox</type>
</CustomField>