SubBt/force-app/main/default/objects/Quote_Template__c/fields/Show_Page_Number__c.field-meta.xml
<CustomField>
    <fullName>Show_Page_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Page Number</label>
    <type>Checkbox</type>
</CustomField>