SubBt/force-app/main/default/objects/Quote_Template__c/fields/Template_Body__c.field-meta.xml
<CustomField>
    <fullName>Template_Body__c</fullName>
    <label>Template Body</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>