SubBt/force-app/main/default/objects/Quote_Template__c/fields/Template_Format__c.field-meta.xml
<CustomField>
    <fullName>Template_Format__c</fullName>
    <label>Template Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Budget</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>