SubBt/force-app/main/default/objects/Quote_Template__c/fields/Template_Header__c.field-meta.xml
<CustomField>
    <fullName>Template_Header__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template Header</label>
    <referenceTo>Template_Header__c</referenceTo>
    <relationshipLabel>Doc Templates</relationshipLabel>
    <relationshipName>Doc_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>