SubBt/force-app/main/default/objects/Quote_Template__c/recordTypes/Contract.recordType-meta.xml
<RecordType>
    <fullName>Contract</fullName>
    <active>true</active>
    <label>Contract</label>
</RecordType>