SubBt/force-app/main/default/objects/Quote_Template__c/recordTypes/Quote.recordType-meta.xml
<RecordType>
    <fullName>Quote</fullName>
    <active>true</active>
    <label>Quote</label>
</RecordType>